Add ConceptSet.clone (#982)